# netbsd-src

./: .gitignore  BUILDING  Makefile  build.py
lib/libipsec/: Makefile
lib/libutil/: Makefile  efun.c
sbin/brconfig/: CMakeLists.txt  brconfig.c
sbin/ifconfig/: CMakeLists.txt  af_atalk.c  af_link.c  ieee80211.c
sbin/init/: Makefile  init.c
sbin/rcorder/: Makefile
sbin/sysctl/: sysctl.c
sys/arch/amd64/amd64/: locore.S
sys/arch/amd64/conf/: GENERIC  INSTALL
sys/arch/amd64/include/: cpu.h
sys/arch/i386/conf/: GENERIC
sys/arch/i386/stand/lib/: pcio.c
sys/arch/x86/x86/: consinit.c  db_memrw.c  intr.c  kgdb_machdep.c  pmap.c  x86_machdep.c
sys/conf/: Makefile.kern.inc  files  majors
sys/dev/: pseudo_dev_skel.c  skeleton.c
sys/dev/ic/: com.c
sys/dev/pci/: if_wm.c
sys/dev/pci/qat/: qatvar.h
sys/kern/: init_main.c  kern_descrip.c  kern_lock.c  kern_mutex.c  kern_sleepq.c  kern_softint.c  kern_subr.c  kern_synch.c  subr_lockdebug.c  subr_prf.c  sys_socket.c  tty.c  uipc_domain.c  uipc_socket.c  uipc_syscalls.c  vfs_mount.c
sys/net/: if.c  if_bridge.c  if_bridgevar.h  if_ipsec.c  pfkeyv2.h  pfkeyv2.h_old_enum  route.c  route.h  rtbl.c  rtsock.c
sys/netinet/: if_inarp.h  in.c  in.h  in_pcb.c  ip_output.c  raw_ip.c  tcp_input.c  tcp_output.c  tcp_usrreq.c  udp_usrreq.c
sys/netipsec/: ipsec.h  key.c
sys/nfs/: nfs_boot.c  nfs_bootdhcp.c  nfs_vfsops.c
sys/sys/: cdefs.h  domain.h  errno.h  file.h  filedesc.h  lwp.h  mbuf.h  param.h  percpu_types.h  protosw.h  pseudo_dev_skel.h  skeleton.h  socket.h  socketvar.h
sys/uvm/: uvm_glue.c
tools/gcc/: Makefile
usr.bin/netstat/: .clang-format
